--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -122,6 +122,20 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-01-22">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-1-22-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/7cd21a68f48876d69af631acc5d9b754.webp" alt="1月22日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-1-22-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">1月22日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、香港、日本、美国、欧洲、韩国、新加坡等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-01-21">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-1-21-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -248,22 +262,8 @@
                                     这一次的节点更新覆盖了加拿大、美国、日本、韩国、新加坡、香港、欧洲等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-01-12">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-1-12-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/4783339f2047bfa62b8bf471ce1cc8e3.webp" alt="1月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-1-12-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">1月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、韩国、美国、香港、欧洲、加拿大、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -272,16 +272,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-33097.htm" title="RMI反序列化学习">RMI反序列化学习</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-9-node-share.htm" title="1月9日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月9日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-39379.htm" title="深圳益沣成资产管理有限公司（深圳市益成实业有限公司）">深圳益沣成资产管理有限公司（深圳市益成实业有限公司）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-1-free-node-subscribe.htm" title="1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-12-node-share-links.htm" title="1月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址">1月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-1-15-free-node-subscribe-links.htm" title="1月15日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">1月15日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-38888.htm" title="澳洲什么牌子的dha好(澳洲什么牌子的dha好一点)">澳洲什么牌子的dha好(澳洲什么牌子的dha好一点)</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-5-free-node-subscribe-links.htm" title="1月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">1月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-36437.htm" title="一片枫叶简笔画图片（一片枫叶图片唯美意境）">一片枫叶简笔画图片（一片枫叶图片唯美意境）</a></li>
-                        <li class="py-2"><a href="/news/article-36329.htm" title="养猫***大概需要多少钱一针疫苗（养猫咪要打什么针大概多少钱）">养猫***大概需要多少钱一针疫苗（养猫咪要打什么针大概多少钱）</a></li>
-                        <li class="py-2"><a href="/news/article-32150.htm" title="八公家宠物酒店（八公家宠物酒店怎么样）">八公家宠物酒店（八公家宠物酒店怎么样）</a></li>
-                        <li class="py-2"><a href="/news/article-39876.htm" title="动物疫苗接种时间表图片高清（动物疫苗接种时间表图片高清大图）">动物疫苗接种时间表图片高清（动物疫苗接种时间表图片高清大图）</a></li>
-                        <li class="py-2"><a href="/news/article-30244.htm" title="动物疫苗接种时间查询app 动物疫苗查询系统">动物疫苗接种时间查询app 动物疫苗查询系统</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-14-free-node-subscribe-links.htm" title="1月14日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">1月14日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-30137.htm" title="学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）">学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-19-free-high-speed-nodes.htm" title="1月19日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">1月19日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-25-free-high-speed-nodes.htm" title="12月25日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">12月25日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-43836.htm" title="养猫的十大禁忌（养猫的十大禁忌猫摇尾巴）">养猫的十大禁忌（养猫的十大禁忌猫摇尾巴）</a></li>
+                        <li class="py-2"><a href="/news/article-40367.htm" title="宠物口粮上市公司（宠物口粮上市公司有几家）">宠物口粮上市公司（宠物口粮上市公司有几家）</a></li>
                     </ul>
     </div>
 </div>
@@ -293,7 +293,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">63</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">66</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
